--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite --host",
+        "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview"
     },
