--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon --watch backend/server.ts --exec \"ts-node -r tsconfig-paths/register --files backend/server.ts\"",
-    "build": "tsc"
+    "build": "npm run build --prefix frontend && tsc"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "pg": "^8.12.0"
   },
@@ -21,7 +21,7 @@
     "@types/pg": "^8.11.6",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.3"
   }
 }
