--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,28 +1,32 @@
 {
     "name": "ldap-visualizer-frontend",
-    "version": "1.0.0",
-    "description": "React frontend for the LDAP visualizer.",
     "private": true,
+    "version": "1.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
+        "dev": "vite --host",
+        "build": "vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
     "dependencies": {
-        "lucide-react": "^0.407.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-icons": "^5.5.0"
+        "react-icons": "^5.2.1"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^7.13.1",
+        "@typescript-eslint/parser": "^7.13.1",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
-        "postcss": "^8.4.39",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.7",
+        "postcss": "^8.4.38",
         "tailwindcss": "^3.4.4",
-        "typescript": "^5.5.3",
-        "vite": "^5.3.3"
+        "typescript": "^5.2.2",
+        "vite": "^5.3.1"
     }
 }
